--- a/main.tex
+++ b/main.tex
@@ -476,12 +476,18 @@ We now prove the opposite inequality, that $a^{x+y} \leqslant a^x \cdot a^y$. We
 \end{equation*}
 For every z, we can pick $\tilde{p}, \tilde{q}$ such that:
 \begin{equation*}
-    \forall z \leqslant x + y: \exists \tilde{p}, \tilde{q}: z \leqslant \tilde{p} + \tilde{q} \leqslant x + \tilde{p} \leqslant x + y
+    (\forall z \in x+y: \exists \tilde{p} \leqslant y, \tilde{q} \leqslant x): z \leqslant \tilde{p} + \tilde{q} \implies a^z \leqslant a^{\tilde{p} + \tilde{q}} = a^{\tilde{p}} \cdot a^{\tilde{q}}
 \end{equation*}
-Thus $a^z \leqslant a^{\tilde{p} + \tilde{q}}$ by lemma 5.3, which means that since the choices of $\tilde{p}, \tilde{q}$ were arbitrary:
+Which means that since the choices of $\tilde{p}, \tilde{q}$ were arbitrary:
+\begin{equation*}
+    \{a^z: z \leqslant x + y\} \subseteq \{a^{q+p}: q \leqslant x \land p \leqslant y\}
+\end{equation*}
 \begin{equation*}
     a^{x+y} = \sup\{a^z: z \leqslant x + y\} \leqslant \sup\{a^{q+p}: q \leqslant x \land p \leqslant y\} = a^x \cdot a^y
 \end{equation*}
 Thus proving $a^{x+y} = a^x \cdot a^y$.
 \end{proof}
+
+\medskip
+Now that we have defined exponentiation with respect to a real valued base, along with elementary operations, we aim to define the inverse of exponentiation, which is the logarithm.
 \end{document}
